# Agent-Demo

./: README.md  requirements.txt
crew_ai/: .env.example  README.md  pyproject.toml  report.md
crew_ai/knowledge/: user_preference.txt
crew_ai/src/crew_ai/: main.py
demo_project/: agent.py
demo_project/.adk/: session.db
google-adk/: .env.example
google-adk/.adk/: session.db
lang-graph/: main.py
